tests/unit/default/syntax-error/054-create-table-parens-name-colon-type-parenses-null.x.t
---- IN ----
+%table(id:decimal()?|
---- OUT ----
---- ERR ----
syntax: expected `)` after `...%table(id:decimal()?` near `|` at position 21 - at line 1
---- EXIT ----
1
